--- a/LabSem3/Views/Labs/Create.cshtml
+++ b/LabSem3/Views/Labs/Create.cshtml
@@ -3,16 +3,12 @@
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Lab</h4>
+        <h4>Create Lab</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
