--- a/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
+++ b/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
@@ -15,10 +15,10 @@
     <link href="~/Content/AdminVersion002/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom styles for this template-->
     <link href="~/Content/AdminVersion002/css/sb-admin-2.min.css" rel="stylesheet">
-
+    <link href="~/Content/css_bach/cssPagination.css" rel="stylesheet" />
     @RenderSection("links", required: false)
 </head>
 
@@ -61,7 +61,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fa-solid fa-users"></i>
                     <span>Accounts Controls</span>
                 </a>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingTwo"
@@ -78,16 +78,16 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fas fa-comment"></i>
                     <span>Complaint Controls</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item active" href="buttons.html">View All Complaint</a>
-                        <a class="collapse-item" href="cards.html">Complaints Waiting</a>
-                        <a class="collapse-item" href="cards.html">Add Complaint</a>
+                        <a class="collapse-item active" href="/Complaint/Index">View All Complaint</a>
+                        <a class="collapse-item" href="/Complaint/ComplaintWaiting">Complaints Waiting</a>
+                        <a class="collapse-item" href="/Complaint/Create">Add Complaint</a>
                     </div>
                 </div>
             </li>
@@ -95,7 +95,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse3" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fas fa-clipboard-list"></i>
                     <span>Schedules Controls</span>
                 </a>
                 <div id="collapse3" class="collapse" aria-labelledby="headingTwo"
@@ -112,7 +112,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse4" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fas fa-building"></i>
                     <span>Departments Controls</span>
                 </a>
                 <div id="collapse4" class="collapse" aria-labelledby="headingTwo"
@@ -129,7 +129,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse5" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fa-solid fa-book"></i>
                     <span>Documents Controls</span>
                 </a>
                 <div id="collapse5" class="collapse" aria-labelledby="headingTwo"
@@ -146,7 +146,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse6" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fa-solid fa-flask-vial"></i>
                     <span>Labs Controls</span>
                 </a>
                 <div id="collapse6" class="collapse" aria-labelledby="headingTwo"
@@ -163,7 +163,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapse7" aria-expanded="true"
                    aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                    <i class="fa-solid fa-computer"></i>
                     <span>Equipments Controls</span>
                 </a>
                 <div id="collapse7" class="collapse" aria-labelledby="headingTwo"
@@ -202,7 +202,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    @*<form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
                             <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                                    aria-label="Search" aria-describedby="basic-addon2">
@@ -212,7 +212,7 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
+                    </form>*@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
