--- a/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
+++ b/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
@@ -19,6 +19,7 @@
     <!-- Custom styles for this template-->
     <link href="~/Content/AdminVersion002/css/sb-admin-2.min.css" rel="stylesheet">
     <link href="~/Content/css_bach/cssPagination.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
     @RenderSection("links", required: false)
 </head>
 
@@ -152,10 +153,9 @@
                 <div id="collapse6" class="collapse" aria-labelledby="headingTwo"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item active" href="buttons.html">View All Complaint</a>
-                        <a class="collapse-item" href="cards.html">Complaints Waiting</a>
-                        <a class="collapse-item" href="cards.html">Add Complaint</a>
+                        <h6 class="collapse-header">Custom Lab:</h6>
+                        <a class="collapse-item active" href="Index">List Lab</a>
+                        <a class="collapse-item" href="Create">Create Lab</a>
                     </div>
                 </div>
             </li>
