--- a/LabSem3/Views/Labs/Edit.cshtml
+++ b/LabSem3/Views/Labs/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model LabSem3.Models.Lab
-
+@using PagedList.Mvc;
+@using PagedList;
 @{
     ViewBag.Title = "Edit";
 }
@@ -10,12 +11,20 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Lab</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DepartmentId, "Department", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,73 +35,150 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CreatedAt, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreatedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreatedAt, "", new { @class = "text-danger" })
+                @Model.CreatedAt
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.UpdatedAt, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UpdatedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UpdatedAt, "", new { @class = "text-danger" })
+                @Model.UpdatedAt
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DeletedAt, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DeletedAt, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DeletedAt, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.EquipmentId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EquipmentId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EquipmentId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AccountId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ScheduleId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ScheduleId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ScheduleId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
+
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="col-sm-12">
+    <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
+        <thead>
+            <tr role="row">
+                <th>
+                    <input type="checkbox"  name="name" id="checkAll" value="" />
+                </th>
+                <th class="sorting sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 100px;">Equipment Id</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 150px;">Name</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 150px;">Thumbnail</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 150px;">Type Equipment</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 150px;">CreatedAt</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Start date: activate to sort column ascending" style="width: 189px;">UpdatedAt</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Salary: activate to sort column ascending" style="width: 171px;">
+                   
+                    <select id="selected" onchange="updatedStatus()" class="custom-select">
+                        @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.EquipmentStatusEnum)))
+                        {
+                            <option value="@item.Value" @(Int32.Parse(item.Value) == Model.Status ? "selected" : "")>@item.Text</option>
+                        }
+                    </select>
+                    
+                </th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Salary: activate to sort column ascending" style="width: 171px;">Action</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th><input type="checkbox"  name="name" value="" /></th>
+                <th rowspan="1" colspan="1">Equipment Id</th>
+                <th rowspan="1" colspan="1">Name</th>
+                <th rowspan="1" colspan="1">Thumbnailt</th>
+                <th rowspan="1" colspan="1">Type Equipment</th>
+                <th rowspan="1" colspan="1">CreatedAt</th>
+                <th rowspan="1" colspan="1">UpdatedAt</th>
+                <th rowspan="1" colspan="1">Status</th>
+                <th rowspan="1" colspan="1">Action</th>
+            </tr>
+        </tfoot>
+        <tbody>
+            @foreach (var equipment in ViewBag.Equipments)
+            {
+                <tr class="odd">
+                    <td>
+                        <input type="checkbox" id="checkElement" name="checkElement" value="" />
+                    </td>
+                    <td class="sorting_1" id="equiptId">@equipment.Id</td>
+                    <td>@equipment.Name</td>
+                    <td>
+                        <img src="https://vn-live-01.slatic.net/p/0e9e38e9e2304eae2f0ecdf59432572d.jpg" class="img-thumbnail" alt="Alternate Text" />
+                    </td>
+                    <td>@equipment.TypeEquipment.Name</td>
+                    <td>
+                        @equipment.CreatedAt
+                    </td>
+                    <td>
+                        @equipment.UpdatedAt
+                    </td>
+                    <td>
+                        @switch (equipment.Status)
+                        {
+                            case 1:
+                                <div>GOOD</div>
+                                break;
+                        }
+                    </td>
+                    <td>
+                        <a><i class="fa-solid fa-info"></i></a>
+                        <a style="margin:0 10px"><i class="fa-solid fa-pen-to-square"></i></a>
+                        <a href="#"><i class="fa-solid fa-trash-can"></i></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
+        Page @(ViewBag.Equipments.PageCount < ViewBag.Equipments.PageNumber ? 0 : ViewBag.Equipments.PageNumber) of @ViewBag.Equipments.PageCount
+        @Html.PagedListPager((IPagedList)ViewBag.Equipments, page => Url.Action("Edit",
+            new { id = Model.Id, page }))
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+<script>
+    function updatedStatus() {
+        var select = document.getElementById('selected');
+        var value = select.options[select.selectedIndex].value;
+        console.log(value);
+    }
+    var array = new Set;
+    document.getElementById('checkAll').onclick = function () {
+        var check = document.getElementById('checkAll');
+        var checkBox = document.getElementsByName('checkElement');;
+        if (check.checked = true) {
+            for (var i = 0; i < checkBox.length; i++) {
+                checkBox[i].checked = true;
+            }
+            var ids = document.getElementsByClassName("sorting_1");
+            for (let id of ids) {
+                array.add(id.innerHTML)
+            }
+            console.log(array)
+
+        }
+
+        //if (check.checked = true) {
+        //    for (var i = 0; i < checkBox.length; i++) {
+        //        checkBox[i].checked = false;
+        //    }
+        //}
+      
+    }
+    document.getElementById('checkAll').ondblclick = function () {
+        var check = document.getElementById('checkAll');
+        var checkBox = document.getElementsByName('checkElement');;
+        check.checked = false
+            for (var i = 0; i < checkBox.length; i++) {
+                checkBox[i].checked = false;
+        }
+        array.clear();
+        console.log(array)
+    }
+</script>
+
+    
+        
