--- a/LabSem3/Views/Labs/Index.cshtml
+++ b/LabSem3/Views/Labs/Index.cshtml
@@ -38,8 +38,8 @@
                                             }
                                         </td>
                                         <td>
-                                            <a href="Details/@lab.Id"><i class="fa-solid fa-info"></i></a>
-                                            <a style="margin:0 10px" href="Details/@lab.Id"><i class="fa-solid fa-pen-to-square"></i></a>
+                                            <a href="/Labs/Details/@lab.Id"><i class="fa-solid fa-info"></i></a>
+                                            <a style="margin:0 10px" href="/Labs/Edit/@lab.Id"><i class="fa-solid fa-pen-to-square"></i></a>
                                             <a href="#"><i class="fa-solid fa-trash-can"></i></a>
                                         </td>
                                     </tr>
