--- a/LabSem3/Views/Equipment/Details.cshtml
+++ b/LabSem3/Views/Equipment/Details.cshtml
@@ -59,11 +59,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TypeEquipmentId)
+            TypeEquipmentName
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TypeEquipmentId)
+            @Html.DisplayFor(model => model.TypeEquipment.Name)
         </dd>
 
     </dl>
