--- a/LabSem3/Views/Document/Edit.cshtml
+++ b/LabSem3/Views/Document/Edit.cshtml
@@ -47,7 +47,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EquipmentId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="TypeEquipmentId">TypeEquipment Name</label>
             <div class="col-md-10">
                 @* @Html.EditorFor(model => model.EquipmentId, new { htmlAttributes = new { @class = "form-control" } })*@
                 <select id="EquipmentId" name="EquipmentId" class="form-control col-2">
