--- a/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
+++ b/LabSem3/Views/Shared/_LayoutLabversion002.cshtml
@@ -20,6 +20,7 @@
     <link href="~/Content/AdminVersion002/css/sb-admin-2.min.css" rel="stylesheet">
     <link href="~/Content/css_bach/cssPagination.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
+    @*<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>*@
     @RenderSection("links", required: false)
 </head>
 
@@ -459,3 +460,5 @@
             $(this).parent('a').addClass('active');
         });
 </script>
+<script src="~/Scripts/jquery-3.4.1.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
